--- a/scss/partials/_stream_item.scss
+++ b/scss/partials/_stream_item.scss
@@ -46,6 +46,39 @@ div.virtualized-list-row:not(.collapsed-item) {
             display: block;
           }
         }
+
+        &.expandable {
+          div.stream-item-header {
+            div.more-menu {
+              display: block;
+
+              button {
+                display: initial;
+              }
+            }
+          }
+        }
+
+        &.unread-item {
+          background-color: var(--foc-new-color);
+          z-index: 2;
+          box-shadow: 0 2px 6px 0 var(--foc-box-shadow);
+          border-radius: 4px;
+          border: 1px solid var(--foc-new-border-color);
+          padding: #{24 + $foc_hover_extra_padding)}px #{32 + $foc_hover_extra_padding}px;
+          width: #{$board_container_width + ($foc_hover_extra_padding * 2)}px;
+          height: #{$foc_height + ($foc_hover_extra_padding * 2)}px;
+
+          div.stream-item-header {
+            div.more-menu {
+              display: block;
+
+              button {
+                display: initial;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -73,29 +106,15 @@ div.stream-item {
     border-radius: 0;
     border: 1px solid var(--foc-divider-line-color);
     background-color: var(--mobile-foc-background-color);
-    padding: 16px 16px 16px;
+    padding: 16px 16px;
     height: #{$mobile_foc_height}px;
   }
 
-  &.expandable {
+  &.draft {
     cursor: pointer;
-
-    @include big_web() {
-      &:hover {
-        div.stream-item-header {
-          div.more-menu {
-            display: block;
-
-            button {
-              display: initial;
-            }
-          }
-        }
-      }
-    }
   }
 
-  &.draft {
+  &.expandable {
     cursor: pointer;
   }
 
@@ -106,29 +125,6 @@ div.stream-item {
 
     &.showing-share {
       z-index: 3;
-    }
-
-    @include big_web(){
-      &:hover {
-        background-color: var(--foc-new-color);
-        z-index: 2;
-        box-shadow: 0 2px 6px 0 var(--foc-box-shadow);
-        border-radius: 4px;
-        border: 1px solid var(--foc-new-border-color);
-        padding: #{24 + $foc_hover_extra_padding)}px #{32 + $foc_hover_extra_padding}px;
-        width: #{$board_container_width + ($foc_hover_extra_padding * 2)}px;
-        height: #{$foc_height + ($foc_hover_extra_padding * 2)}px;
-
-        div.stream-item-header {
-          div.more-menu {
-            display: block;
-
-            button {
-              display: initial;
-            }
-          }
-        }
-      }
     }
   }
 
